====
News
====

Sloan Foundation Grant
----------------------

IPython has been awarded a $1.15 million grant from `the Alfred P. Sloan
Foundation <http://www.sloan.org/>`_. This will support several core developers,
who'll focus on building the IPython Notebook into a tool for open, collaborative,
reproducible scientific computing. We'll also be bringing developers together
for two sprints each year in California. `See more details. <sloan-grant.html>`_

IPython 0.13
------------
IPython 0.13 was released on June 30, 2012. This release sees a substantial
redesign of the IPython Notebook, the introduction of 'cell magic functions',
as well as numerous other improvements. `Download <download.html>`__ it now, or
see the `release notes
<http://ipython.org/ipython-doc/rel-0.13/whatsnew/version0.13.html>`__ for more
details.

IPython 0.12.1
--------------

IPython 0.12.1 was released on April 21, 2012.  This is a bugfix-only release;
no new features have been introduced but `over 70 issues`_ have been fixed.
All users of IPython 0.12 are encouraged to upgrade to this release.

.. _over 70 issues: http://ipython.org/ipython-doc/stable/whatsnew/github-stats-0.12.html#issues-list-012


IPython 0.12
------------

IPython 0.12 was released on 18 December 2011. The major new feature with this
release is the `IPython Notebook <ipython-doc/dev/interactive/htmlnotebook.html>`_,
an interactive Python interface running in the browser. `Download <download.html>`_
it now, or read more about `what's new
<http://ipython.org/ipython-doc/rel-0.12/whatsnew/version0.12.html>`_.

.. image:: _static/ipy_0.12.png

Try IPython online
------------------

As of Autumn 2011, you can `try IPython online
<http://www.pythonanywhere.com/try-ipython/>`__ in your browser. New users can
explore the features before installing it, or you can do some quick
calculations from any computer with web access.

Thanks to the guys at `PythonAnywhere <http://www.pythonanywhere.com/>`__ for