@@ -94,6 +94,11 @@ supports Python 2.5, and can be used with Python 2.4.
 Announcements
 =============
 
+- **Roadmap to 1.0 and beyond**: IPython 1.0 is coming mid-July 2013. See the
+  grant_ which is funding the bulk of the work, as well as our roadmap_ for
+  achieving the grant's objectives.
+  `Read on for more details <roadmap-announcement.html>`_.
+
 - **Sloan Foundation grant**: IPython has been awarded a $1.15 million grant
   from the `Alfred P. Sloan Foundation`_. This will
   support several core developers, allowing them to focus on building the
@@ -197,6 +202,9 @@ following sources:
 .. _Enthought Python Distribution: http://www.enthought.com/products/epd.php
 .. _nipy: http://nipy.org
 .. _sage: http://sagemath.org
+.. _grant: http://ipython.org/sloan-grant.html
+.. _roadmap: https://github.com/ipython/ipython/wiki/Roadmap:-IPython
+
 
 .. toctree::
    :hidden:
@@ -216,4 +224,5 @@ following sources:
    whatsnew083
    searchresults
    sloan-grant
+   roadmap-announcement
    donate
