@@ -1,0 +1,70 @@
+Roadmap to 1.0 and Beyond
+-------------------------
+
+TL;DR summary: Hi! IPython 1.0 coming mid-July 2013. See the grant_ which is
+funding the bulk of the work, as well as our roadmap_ for achieving the
+grant's objectives.
+
+There's been a lot of excitement on about the grant the IPython team received
+from the Sloan Foundation. The easiest way to communicate the contents of the
+Sloan grant is to just provide it in its entirety, which is what we've done
+with direct links for `html`_ and  `pdf`_ version.
+
+The interested reader will find a description of changes coming to IPython
+over the next two years, as well as the motivation behind them, and the
+personnel involved. (For example, the astute reader of the grant will
+correctly infer that this email is one way in which I am filling my
+responsibility as "community engagement and evangelism"... GO TEAM!)
+
+Two weeks ago, the bulk of IPython's core contributors had a series of
+planning sessions.  For three days,  `Brian`_,  `Fernando`_,  `Min`_, and
+`I`_ met on campus in Berkeley, with  `Thomas`_ and  `Matthias`_
+joining in via video teleconference (and `Brad`_, for one of the days, too).
+
+.. _Brian: https://github.com/ellisonbg
+.. _Fernando: https://github.com/fperez
+.. _Min: https://github.com/minrk
+.. _I: https://github.com/ivanov
+.. _Thomas: https://github.com/takluyver
+.. _Matthias: https://github.com/Carreau
+.. _Brad: https://github.com/bfroehle
+
+You can see the  `full notes from those meetings`_.
+
+.. _full notes from those meetings: https://github.com/ipython/ipython/wiki/Dev:-Meeting-notes,-February-6,-2013
+
+Our primary objective was to outline a plan of what work we want to accomplish
+in the next two years (broadly speaking) as well as to make concrete goals for
+our next (1.0!) release, which will land around Bastille Day (July 14th, 2013,
+for the uninitiated).
+
+It's kind of funny that there's a message from Fernando to [ipython-user] back
+in April of 2005 titled  `"Towards IPython 1.0, the famous big cleanup"`_. In
+it, Fernando makes a last call for outstanding critical bugs because he's
+preparing users for a transition toward big changes in the IPython code base.
+Because, once he makes the first commit and starts working on the cleanup,
+he'll have to ignore every request made "until the new shiny ipython emerges
+from the process, reborn in a glory which shall blind the world." Toward the
+end of the email, he finishes with: "I hope the changes will be worth it, and
+when the dust settles, we'll have something we can call IPython 1.0"... And
+eight years and a few months after that email was sent, we will! :)
+
+What will 1.0 look like? Biggest changes on the user side will be the
+integration of  `nbconvert`_ into IPython proper. But that's just my summary
+of it, the interested reader is encouraged to read the gory details in the
+roadmap_.
+
+
+that's it from me for now,
+
+best,
+
+Paul Ivanov
+
+.. _grant: http://ipython.org/sloan-grant.html
+.. _html: http://ipython.org/_static/sloangrant/sloan-grant.html
+.. _pdf: http://ipython.org/_static/sloangrant/sloan-grant.pdf
+.. _roadmap: https://github.com/ipython/ipython/wiki/Roadmap:-IPython
+.. _"Towards IPython 1.0, the famous big cleanup": http://mail.scipy.org/pipermail/ipython-user/2005-April/002648.html
+.. _nbconvert: https://github.com/ipython/nbconvert
+
