@@ -259,6 +259,10 @@ supports Python 2.5, and can be used with Python 2.4.</p>
 </table><div class="section" id="announcements">
 <h1>Announcements<a class="headerlink" href="#announcements" title="Permalink to this headline">¶</a></h1>
 <ul class="simple">
+<li><strong>Roadmap to 1.0 and beyond</strong>: IPython 1.0 is coming mid-July 2013. See the
+<a class="reference external" href="http://ipython.org/sloan-grant.html">grant</a> which is funding the bulk of the work, as well as our <a class="reference external" href="https://github.com/ipython/ipython/wiki/Roadmap:-IPython">roadmap</a> for
+achieving the grant&#8217;s objectives.
+<a class="reference external" href="roadmap-announcement.html">Read on for more details</a>.</li>
 <li><strong>Sloan Foundation grant</strong>: IPython has been awarded a $1.15 million grant
 from the <a class="reference external" href="http://www.sloan.org">Alfred P. Sloan Foundation</a>. This will
 support several core developers, allowing them to focus on building the
