@@ -204,6 +204,12 @@
             
   <div class="section" id="news">
 <h1>News<a class="headerlink" href="#news" title="Permalink to this headline">¶</a></h1>
+<div class="section" id="roadmap-to-1-0-and-beyond">
+<h2>Roadmap to 1.0 and Beyond<a class="headerlink" href="#roadmap-to-1-0-and-beyond" title="Permalink to this headline">¶</a></h2>
+<p>IPython 1.0 is coming mid-July 2013. See the <a class="reference external" href="http://ipython.org/sloan-grant.html">grant</a> which is funding the bulk
+of the work, as well as our <a class="reference external" href="https://github.com/ipython/ipython/wiki/Roadmap:-IPython">roadmap</a> for achieving the grant&#8217;s objectives.
+<a class="reference external" href="roadmap-announcement.html">Read on for more details</a>.</p>
+</div>
 <div class="section" id="sloan-foundation-grant">
 <h2>Sloan Foundation Grant<a class="headerlink" href="#sloan-foundation-grant" title="Permalink to this headline">¶</a></h2>
 <p>IPython has been awarded a $1.15 million grant from <a class="reference external" href="http://www.sloan.org/">the Alfred P. Sloan
