@@ -28,7 +28,7 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <link rel="shortcut icon" href="_static/favicon.ico"/>
     <link rel="top" title="IPython" href="index.html" />
-    <link rel="next" title="Support IPython Development" href="donate.html" />
+    <link rel="next" title="Roadmap to 1.0 and Beyond" href="roadmap-announcement.html" />
     <link rel="prev" title="Search results" href="searchresults.html" /> 
   </head>
   <body>
