@@ -2,6 +2,16 @@
 News
 ====
 
+Roadmap to 1.0 and Beyond
+-------------------------
+
+IPython 1.0 is coming mid-July 2013. See the grant_ which is funding the bulk
+of the work, as well as our roadmap_ for achieving the grant's objectives.
+`Read on for more details <roadmap-announcement.html>`_.
+
+.. _grant: http://ipython.org/sloan-grant.html
+.. _roadmap: https://github.com/ipython/ipython/wiki/Roadmap:-IPython
+
 Sloan Foundation Grant
 ----------------------
 
